# liero

./: .clang-format  .clang-tidy  .clangd  .git-blame-ignore-revs  .gitignore  .gitmodules  .hgignore  .travis.yml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Jamfile  PLAN.md  README.md  SDLMain.m  TODO.txt  bits.h  blit.cpp  bobject.cpp  bobject.hpp  bonus.cpp  bonus.hpp  colour.hpp  common.cpp  common.hpp  common_exereader.cpp  common_exereader.hpp  common_model.hpp  common_writer.cpp  console.cpp  console.hpp  constants.cpp  constants.hpp  controller.hpp  exactObjectList.hpp  fastObjectList.hpp  filesystem.cpp  filesystem.hpp  font.cpp  font.hpp  (+77 more)
.claude/plans/: arbitrary-map-sizes.plan.md
.github/: dependabot.yml
.github/workflows/: build.yml  clang-format.yml  clang-tidy.yml  pages.yml  relay-server.yml  test.yml
_build/: Minimal size.props  liero.sln  liero.sublime-project  liero.vcproj  liero.vcxproj  liero.vcxproj.filters  liero_sdl.rc  liero_sdl.vcxproj  liero_sdl.vcxproj.filters  liero_tools.vcxproj  liero_tools.vcxproj.filters  packages.config  resource.h  tl.vcxproj  tl.vcxproj.filters  tyvm.vcxproj  tyvm.vcxproj.filters
_build/tc_tool/: tc_tool.vcxproj  tc_tool.vcxproj.filters
ai/: astar.hpp  dijkstra.cpp  dijkstra.hpp  predictive_ai.cpp  predictive_ai.hpp  work_queue.hpp
approxmath/: am_internal.h
codec/: model.h  polar_code.h  polar_model.c
controller/: commonController.cpp  controller.hpp  localController.cpp  localController.hpp  replayController.cpp  replayController.hpp  stats_presenter.cpp  stats_presenter.hpp
data/Profiles/: AI (L).toml  AI (R).toml  Joystick0.toml  Joystick1.toml  Lefty (L).toml  Lefty (R).toml  Righty (L).toml  Righty (R).toml
data/Setups/: liero.cfg  orbmit.cfg
docs/: building.md  clang-flag-day.md  modern-level-authoring.md
docs/ideas/: modern-colors.md  multiplayer.md
docs/plans/: modern-colors-stage1.md  modern-colors-stage2.md  modern-colors-stage3.md  modern-colors-stage4.md
docs/specs/: flatpak-tasks.md  flatpak.md  xdg-config-paths-tasks.md  xdg-config-paths.md
fdlibm/: e_asin.c  e_gamma_r.c  e_log10.c  e_pow.c  e_scalb.c  e_sinh.c  fdlibm_intern.h  k_standard.c  s_ceil.c  s_cos.c  s_erf.c  s_ilogb.c  s_modf.c  s_rint.c  s_sin.c  s_tan.c  w_acos.c  w_cosh.c  w_gamma.c  w_jn.c  w_lgamma_r.c  w_log10.c
game/: bobject.cpp  bonus.cpp  common.cpp  common.hpp  console.hpp  filesystem.hpp  gfx.cpp  gfx.hpp  main.cpp  material.hpp  math.cpp  ninjarope.cpp  nobject.hpp  objectList.hpp  reader.hpp  sfx.hpp  spectatorviewport.hpp  stats.hpp  text.cpp  version.hpp  weapon.cpp  weapsel.hpp  worm.cpp  worm.hpp
game/ai/: dijkstra.hpp  work_queue.hpp
game/controller/: commonController.hpp  stats_presenter.hpp
game/gfx/: bitmap.hpp  blit.cpp  blit.hpp  color.hpp  font.cpp  macros.hpp  palette.cpp  sprite.cpp  sprite.hpp
game/menu/: arrayEnumBehavior.hpp  booleanSwitchBehavior.cpp  booleanSwitchBehavior.hpp  enumBehavior.cpp  enumBehavior.hpp  integerBehavior.cpp  integerBehavior.hpp  itemBehavior.hpp  mainMenu.hpp  menu.cpp  menu.hpp  menuItem.cpp  menuItem.hpp  timeBehavior.cpp
game/mixer/: mixer.c  mixer.h  player.hpp
gfx/: bitmap.hpp  blit.cpp  blit.hpp  color.hpp  font.cpp  font.hpp  macros.hpp  palette.cpp  palette.hpp  renderer.cpp  renderer.hpp  sprite.cpp  sprite.hpp
gvl/: .hgignore  cstdint.hpp
gvl/_build/: Gvl C++0x.props  Gvl Standard Config.props
gvl/containers/: bucket.hpp  list.cpp  list.h  list.hpp  pairing_heap.hpp
gvl/crypt/: gash.hpp
gvl/io/: convert.cpp  convert.hpp  deflate_filter.hpp  encoding.cpp  encoding.hpp  encoding_compat.hpp  except.hpp  fstream.hpp  iostream.hpp  stream.cpp  stream.hpp
gvl/io2/: convert.cpp  convert.hpp  deflate_filter.hpp  fstream.hpp  stream.cpp  stream.hpp
gvl/math/: cmwc.hpp  random.hpp  rect.hpp  vec.hpp
gvl/meta/: as_unsigned.hpp  is_ptr_convertible.hpp  meta.hpp  static_log2.hpp
gvl/resman/: shared.cpp  shared.hpp  shared_ptr.hpp
gvl/serialization/: archive.hpp  coding.hpp  context.hpp  except.hpp  toml.hpp
gvl/support/: bits.c  bits.hpp  cstdint.hpp  debug.cpp  debug.hpp  functional.hpp  macros.hpp  opt.hpp  platform.cpp  platform.h  platform.hpp  profile.cpp  profile.hpp  type_info.hpp
gvl/system/: memory.hpp  system.c  system.hpp  windows.hpp
gvl/zlib/: miniz.c  zlib2.h
libavcodec/libavutil/: common.h
menu/: arrayEnumBehavior.hpp  booleanSwitchBehavior.cpp  booleanSwitchBehavior.hpp  booleanSwitchBehaviour.cpp  booleanSwitchBehaviour.hpp  enumBehavior.cpp  enumBehavior.hpp  enumBehaviour.cpp  enumBehaviour.hpp  fileSelector.hpp  hiddenMenu.cpp  hiddenMenu.hpp  integerBehavior.cpp  integerBehavior.hpp  integerBehaviour.cpp  integerBehaviour.hpp  itemBehavior.cpp  itemBehavior.hpp  itemBehaviour.cpp  mainMenu.cpp  mainMenu.hpp  menu.cpp  menu.hpp  menuItem.cpp  menuItem.hpp  timeBehavior.cpp  timeBehavior.hpp  timeBehaviour.cpp  timeBehaviour.hpp
mixer/: mixer.c  mixer.h  player.cpp  player.hpp
packaging/: io.github.openliero.openliero.yml  openliero.desktop  openliero.metainfo.xml
packaging/icons/: openliero.rc.in
pkg/: liero.icns  orbmit.cfg  original.cfg
pkg/Profiles/: AIJoe (L).lpf  AIJoe (R).lpf  Birk (L).lpf  Birk (R).lpf  Bonanza (L).lpf  Bonanza (R).lpf  Chucky (L).lpf  Chucky (R).lpf  Errol (L).lpf  Errol (R).lpf  Kisselkassen (L).lpf  Kisselkassen (R).lpf  Space Face (L).lpf  (+17 more)
scripts/: clang-format-all.sh  clang-format-diff.sh  clang-tidy-all.sh  clang-tidy-diff.sh  clang-tidy-fix.sh  validate_tcs.sh
server/: Dockerfile  go.mod  main.go  openliero-relay  protocol.go  server.go  server_test.go
test/: pairing_heap.c
tests/: test_invariant_gfx.cpp
tl/: char.h  coro.h  deflate.c  deflate.h  hashset.h  image.c  inflate.c  list.h  png.h  rect.h  rectpack.h  region.c  region.h  socket.c  socket.h  socket_sys.h  stream.h  treap.h  truetype.c  truetype.h  types.h  utf8.h  vector.h  vorbis.c
tools/: gen_large_test.py  gen_stage4_anim.py  lev_extract.py  lev_gen.py  migrate_sound_refs.py
video_tool/: replay_to_video.cpp  replay_to_video.hpp  video_recorder.h
vm/: asm.c  asm.h  compiler.c  tyvm.h
(+631 files in other folders)
